[package]
name = "fat32"
version = "0.2.1"
authors = ["spxg <itsme@unsafe.me>"]
edition = "2018"
description = "FAT32 FileSystem Library"
keywords = ["sdcard", "fat", "embedded", "stm32f407", "filesystem"]
categories = ["embedded", "no-std"]
repository = "https://github.com/Spxg/fat32"
readme = "README.md"
license = "MIT"

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3"
features = ["fileapi", "winioctl", "ioapiset"]

[dependencies]
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }