[package]
name = "FAT32"
version = "0.0.1"
authors = ["KuangjuX <qcx@tju.edu.cn>"]
edition = "2018"

[target.'cfg(windows)'.dev-dependencies.winapi]
version = "0.3"
features = ["fileapi", "winioctl", "ioapiset"]

[dependencies]
spin = "0.7.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }